<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_height="wrap_content" android:text="" android:layout_width="wrap_content" android:id="@+id/storeOriginView"></TextView>
    <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tableLayout1">
        <TableRow android:id="@+id/tableRow7" android:layout_width="match_parent" android:layout_height="wrap_content">
            <CheckBox android:text="@string/gpsCheckboxDisplay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/gpsCheckbox"></CheckBox>
        </TableRow>
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:text="@string/whereButtonDisplay" android:onClick="onClickHandler" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/whereButton"></Button>
            <Button android:text="@string/clearButtonDisplay" android:onClick="onClickHandler" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/clearButton"></Button>
        </TableRow>
	    <TableRow android:id="@+id/tableRow8" android:layout_height="wrap_content" android:layout_width="match_parent">
	        <TextView android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timeLabel"></TextView>
	        <EditText android:layout_height="wrap_content" android:id="@+id/timeField" android:layout_width="match_parent" android:layout_weight="1"></EditText>
	    </TableRow>
	    <TableRow android:id="@+id/tableRow2" android:layout_height="wrap_content" android:layout_width="match_parent">
	        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/latitudeLabel"></TextView>
	        <EditText android:layout_height="wrap_content" android:id="@+id/latitudeField" android:layout_width="match_parent" android:layout_weight="1"></EditText>
	        <TextView android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/degreeMinUnit"></TextView>
	    </TableRow>
	    <TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content" android:layout_width="match_parent">
	        <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/longitudeLabel"></TextView>
	        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/longitudeField" android:layout_weight="1"></EditText>
	        <TextView android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/degreeMinUnit"></TextView>
	    </TableRow>
	    <TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content" android:layout_width="match_parent">
	        <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/altitudeLabel"></TextView>
	        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/altitudeField" android:layout_weight="1"></EditText>
	        <TextView android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/altitudeUnit"></TextView>
	    </TableRow>
	    <TableRow android:id="@+id/tableRow5" android:layout_height="wrap_content" android:layout_width="match_parent">
	        <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bearingLabel"></TextView>
	        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/bearingField" android:layout_weight="1"></EditText>
	        <TextView android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bearingUnit"></TextView>
	    </TableRow>
	    <TableRow android:id="@+id/tableRow6" android:layout_height="wrap_content" android:layout_width="match_parent">
	        <TextView android:id="@+id/textView5" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/speedLabel"></TextView>
	        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/speedField" android:layout_weight="1"></EditText>
	        <TextView android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/speedUnit"></TextView>
	    </TableRow>
    </TableLayout>
    <TextView android:id="@+id/geocoderStatusView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Uninitialized"></TextView>
</LinearLayout>
